main body updated(right section alignment corrected)

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body
 }
 .mainbody
 {
-    height: 550px;
+    height: 630px;
     background: linear-gradient(white, #D3D8E8);
 }
 
@@ -121,9 +121,9 @@ body
 }
 .email-pass
 {
-    margin-top: 10px;
+    margin-top: 20px;
     width: 500px;
-    height: 38px;
+    height: 50px;
     display: inline-block;
     border: 2px solid #ccc;
     border-radius: 5px;
@@ -132,7 +132,7 @@ body
 .surname
 {
     margin-left:4px ;
-    height: 38px;
+    height: 50px;
     width: 245px;
     display: inline-block;
     border: 2px solid #ccc;
@@ -141,13 +141,25 @@ body
 }
 .fname
 {
-    height: 38px;
+    height: 50px;
     width: 245px;
     border-radius: 5px;
     display: inline-block;
     border: 2px solid #ccc;
     border-radius: 5px;
     box-sizing: border-box;
+}
+.fname::placeholder
+{
+    font-size: 17px;
+}
+.surname::placeholder
+{
+    font-size: 17px;
+}
+.email-pass::placeholder
+{
+    font-size: 17px;
 }
 .para-dob
 {
@@ -182,7 +194,8 @@ body
 }
 .mainbodybottompara
 {
-    font-size: 10px;
+    width: 400px;
+    font-size: 12px;
     color: #676767;
     text-decoration: none;
 }
@@ -216,12 +229,22 @@ body
 {
     width: 550px;
 }
-
+.line
+{
+    padding-top: 10px;
+}
 .terms
 {
-    font-size: 13px;
+    font-size: 14px;
 }
 .para4
 {
     width: 400px;
+}
+.footer
+{
+    height: 150px;
+    padding-left: 150px;
+    padding-top:80px;
+    font-size: 12px;
 }
